app/assets/stylesheets/_epm_base.css
/* ... */
@font-face {
    font-family:"helve";
    src:url("/assets/helveticaneueultralight.ttf"),
    url("/assets/helveticaneueultralight.eot");
    /*src:url("font/helveticaneueultralight.ttf"),*/
    /*url("font/helveticaneueultralight.eot");*/
}
@font-face {
    font-family:'maven';
    src:url("/assets/mavenprolight300.ttf"),
    url("/assets/mavenprolight300.eot");
    /*src:url("font/mavenprolight300.ttf"),*/
    /*url("font/mavenprolight300.eot");*/
}
@font-face {
    font-family:'avenir';
    src:url("/assets/Avenir-Roman.ttf"),
    url("/assets/Avenir-Roman.eot");
    /*src:url("font/Avenir-Roman.ttf"),*/
    /*url("font/Avenir-Roman.eot");*/
}
html{
    height:100%;
    width:100%;
}
body{
    /*height:100%;*/
    margin:0;
    font-weight:500;
    font-family:"open-sans";
    width:100%;
}
/*********************************************************************************************************左边用户设置部分
*******************************************************************************************************************/
.left-user-setting{
    position:absolute;
    top:0;
    height:100%;
    bottom:0;
    width:200px;
    background-color:#333;
    z-index:90;
    left:-200px;
    transition:left 0.25s ease-out;
    -moz-transition:left 0.25s ease-out;
    -webkit-transition:left 0.25s ease-out;
}
.btn-log-out{
    z-index:100;
    position:absolute;
    bottom:40px;
    width:76%;
    left:50%;
    margin-left:-38%;
}
/********************************************************************************************************* 右边主内容区
*******************************************************************************************************************/
.wrap-main{
    min-width:1290px;
    position:absolute;
    transition:left 0.25s ease-out;
    right:0;
    left:0;
    height:100%;
}
/*********************************************************************************************************头部
*******************************************************************************************************************/
header{
    height:70px;
    background-color:#f2f2f2;
    z-index:30;
    position:relative;
    background-color:#5fa9da;
    box-shadow:0 2px 5px rgba(71, 71, 71, 0.3);
    -moz-shadow:0 2px 5px rgba(71, 71, 71, 0.3);
    -webki-shadow:0 2px 5px rgba(71, 71, 71, 0.3);
}
.user-portrait-background{
    position:relative;
    height:100%;
    width:72px;
    cursor:default;
}
.user-portrait-brand{
    background:url("/assets/logo.png") no-repeat 3px -5px;
    /*background:url("../images/logo2.png") no-repeat center center;*/
    width:45px;
    height:45px;
    padding-top:0px;
    margin-top:12px;
    margin-left:13px;
    position:relative;
}
.user-portrait-brand:after{
    content:"ClearInsight";
    position:absolute;
    bottom:0px;
    font-size:10px;
    color:rgba(255,255,255,0.55);
    left:-3px;
}
nav{
    height:100%;
}
nav ul{
    list-style: none;
    display:inline-block;
    margin:0;
    padding-left:5px;
}
nav>ul>li{
    float:left;
    line-height:21px;
    margin-right:10px;
}
nav>ul>li.active a span{
    background-color:#5595bf;
}
nav>ul>li>a{
    display:block;

    color:white;
    font-size:13px;
    height:46px;
    text-align:center;
    cursor:pointer;
    text-decoration:none;
}
nav ul li a:hover span{
    background-color:#5595bf;
}
nav ul li:nth-last-of-type(2) span{
    border-left:2px solid #5595bf;
    padding:3px 0px !important;
    cursor:default !important;
}
nav ul li:nth-last-of-type(2) a:hover span{
    background-color:inherit;
}
nav ul li a span:nth-of-type(1){
    display:block;
    margin-top:24px;
    margin-bottom:20px;
    padding:3px 4px;
}
nav ul li:last-of-type a span{

    /*width:65px;*/
    text-align:center;
    position:relative;
    /*padding-left:3px;*/
}
/*nav ul li:last-of-type a span:before{*/
    /*content:url('../images/entry-kpi.png');*/
    /*content:url('/assets/entry-kpi.png');*/
    /*display:block;*/
    /*width:20px;*/
    /*height:1px;*/
    /*position:absolute;*/
    /*bottom:29px;*/
    /*left:0px;*/
    /*top:4px;*/
/*}*/
nav ul li a:hover ~ .nav-manage-sub{
    left:-12px;
}
.nav-manage-sub{
    position:absolute;
    width:100px;
    padding:0;
    background:#5FA9DA;
    z-index:100;
    left:-999em;
    box-shadow:-2px 3px 3px rgba(0, 0, 0, 0.4);
    -moz-shadow:-2px 3px 3px rgba(0, 0, 0, 0.4);
    -webki-shadow:-2px 3px 3px rgba(0, 0, 0, 0.4);
}
.nav-manage-sub:hover{
    left:-12px;
}
.nav-manage-sub>li>a{
    text-align:center;
    display:block;
    color:white;
    padding:7px 0;
    cursor:pointer;
    text-decoration:none;
    font-size:13px;
}
.nav-manage-sub>li>a:hover{
    background-color:#5595bf;
}
.nav-user-part{
    list-style-type: none;
    display:block;
    float:right;
    color:white;
    font-size:15px;
    padding-right:6px;
    margin-bottom:0px;
    margin-top:20px;
}
.nav-user-part>li{
    display:inline-block;
    margin:6px 0;
    padding:0px 3px;
    cursor:pointer;
    font-size:13px;
}
.nav-user-part>li:first-of-type{
    margin-right:5px;
}
.nav-user-part>li.empty{
    border-left:2px solid #5595bf;
    padding:3px 0px !important;
    cursor:default !important;
    margin-right:-5px;
    margin-left:5px;
}
.nav-user-part>li.select-language{
    position:relative;
    font-size:13px;
}
.nav-user-part>li.select-language .menu-select-language{
    position:absolute;
    width:100px;
    padding:5px 0px;
    font-size:13px;
    background:#5FA9DA;
    z-index:100;
    left:-999em;
    top:40px;
    box-shadow:-2px 3px 3px rgba(0, 0, 0, 0.4);
    -moz-shadow:-2px 3px 3px rgba(0, 0, 0, 0.4);
    -webki-shadow:-2px 3px 3px rgba(0, 0, 0, 0.4);
    list-style-type: none;
    text-align:left;
}
.nav-user-part>li.select-language .menu-select-language li{
    padding:4px 3px;
}
.nav-user-part>li.select-language .menu-select-language li:hover{
    background-color:#5595bf;
}
.nav-user-part li .icon-user{
    font-size:18px;
    position:relative;
    top:1px;
    pointer-events:auto;
}
/* ... */

